--- a/css/main.css
+++ b/css/main.css
@@ -4,19 +4,10 @@
 <title>Main.css</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-<link rel="stylesheet" href="https://www.w3schools.com/lib/w3-theme-black.css">
-<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto">
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+<link rel="stylesheet" href="https://hollanddurrant.github.io/index.html">
+<link rel="stylesheet" href="https://hollanddurrant.github.io/inspire.html">
+<link rel="stylesheet" href="https://hollanddurrant.github.io/profile.html">
+<link rel="stylesheet" href="https://hollanddurrant.github.io/amuse.html">
+<link rel="stylesheet" href="https://hollanddurrant.github.io/template.html">
+<link rel="stylesheet" href="https://hollanddurrant.github.io/superhero.html">
 <style>
-html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif;}
-.w3-sidebar {
-  z-index: 3;
-  width: 250px;
-  top: 43px;
-  bottom: 0;
-  height: inherit;
-}
-</style>
-</head>
-<body>
